<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fondo"
    tools:context=".view.fragment.RegistroFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/titulo_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_registro"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textSize="22dp"/>
    <EditText
        android:id="@+id/nombre_registro"
        android:layout_width="0dp"
        android:layout_height="@dimen/editx_height"
        app:layout_constraintStart_toStartOf="@id/correo"
        app:layout_constraintEnd_toEndOf="@id/correo"
        android:layout_marginTop="30dp"
        android:paddingStart="15dp"
        android:paddingEnd="110dp"
        android:paddingVertical="12dp"
        android:hint="@string/nombre"
        android:background="@drawable/button_border"
        app:layout_constraintTop_toBottomOf="@id/titulo_regis"/>
    <EditText
        android:id="@+id/telf_registro"
        android:layout_width="0dp"
        android:layout_height="@dimen/editx_height"
        app:layout_constraintStart_toStartOf="@id/correo"
        app:layout_constraintEnd_toEndOf="@id/correo"
        android:layout_marginTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="110dp"
        android:paddingVertical="12dp"
        android:hint="@string/numero_telf"
        android:background="@drawable/button_border"
        app:layout_constraintTop_toBottomOf="@id/nombre_registro"/>
    <EditText
        android:id="@+id/correo"
        android:layout_width="@dimen/crear_cuenta_width"
        android:layout_height="@dimen/editx_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="110dp"
        android:paddingVertical="12dp"
        android:hint="@string/correo"
        android:background="@drawable/button_border"
        app:layout_constraintTop_toBottomOf="@id/telf_registro"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contra"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="@dimen/editx_height"
        app:layout_constraintStart_toStartOf="@id/correo"
        app:layout_constraintEnd_toEndOf="@id/correo"
        app:layout_constraintTop_toBottomOf="@id/correo"
        app:boxBackgroundMode="none"
        app:passwordToggleEnabled="true"
        android:background="@drawable/button_border"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/contra"
            android:layout_width="match_parent"
            android:paddingVertical="12dp"
            android:textSize="17dp"
            android:layout_height="@dimen/editx_height"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/requisitos_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contra"
        android:text="@string/requisitos_pass"
        android:textSize="12dp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_info"
        android:gravity=""
        />
    <Switch
        android:id="@+id/switch_terminos"
        android:layout_width="@dimen/crear_cuenta_width"
        android:layout_height="wrap_content"
        android:text="@string/terminos_condiciones"
        app:layout_constraintTop_toBottomOf="@id/requisitos_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:textSize="12dp"
        android:switchPadding="10dp"
        />
    <Button
        android:id="@+id/bnt_registro"
        android:layout_width="0dp"
        android:layout_height="@dimen/editx_height"
        android:backgroundTint="@color/nara_oscuro"
        android:text="@string/crear"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/correo"
        app:layout_constraintStart_toStartOf="@id/correo"
        app:layout_constraintTop_toBottomOf="@id/switch_terminos" />

</androidx.constraintlayout.widget.ConstraintLayout>