<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fondo"
    tools:context=".view.fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:src="@drawable/logo"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tw_bienv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/bienvenido"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="28sp"/>
    <TextView
        android:id="@+id/acc_crear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/nara_oscuro"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tw_bienv"
        android:layout_marginTop="40dp"
        android:text="@string/acceder_O_Crear"/>
    <Button
        android:id="@+id/bnt_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bott_google"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/google10"
        android:drawablePadding="8dp"
        app:layout_constraintStart_toStartOf="@id/correo"
        app:layout_constraintEnd_toEndOf="@id/correo"
        app:layout_constraintTop_toBottomOf="@id/acc_crear"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/separacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/bnt_google"
        android:text=" - - - - - - - - - o - - - - - - - - - "/>

    <EditText
        android:id="@+id/correo"
        android:layout_width="0dp"
        android:layout_height="@dimen/editx_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent=".75"
        android:singleLine="true"
        android:layout_marginTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="110dp"
        android:paddingVertical="12dp"
        android:hint="@string/correo"
        android:background="@drawable/button_border"
        app:layout_constraintTop_toBottomOf="@id/separacion"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contra"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="@dimen/editx_height"
        app:layout_constraintStart_toStartOf="@id/correo"
        app:layout_constraintEnd_toEndOf="@id/correo"
        app:layout_constraintTop_toBottomOf="@id/correo"
        app:boxBackgroundMode="none"
        app:passwordToggleEnabled="true"
        android:background="@drawable/button_border"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/contra"
            android:layout_width="match_parent"
            android:paddingVertical="12dp"
            android:textSize="17sp"
            android:layout_height="@dimen/editx_height"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/bnt_acceder"
        android:layout_width="0dp"
        android:layout_height="@dimen/editx_height"
        app:layout_constraintStart_toStartOf="@id/correo"
        app:layout_constraintEnd_toEndOf="@id/correo"
        app:layout_constraintTop_toBottomOf="@id/contra"
        android:layout_marginTop="40dp"
        android:text="@string/acceder"
        android:textColor="@color/white"
        android:backgroundTint="@color/nara_oscuro"
        />
    <TextView
        android:id="@+id/olvidar_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bnt_acceder"
        android:text="@string/olvide_contra"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <View
        android:id="@+id/separador"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/bg_separador"
        app:layout_constraintStart_toStartOf="@id/bnt_signOut"
        app:layout_constraintEnd_toEndOf="@id/bnt_signOut"
        app:layout_constraintTop_toBottomOf="@id/olvidar_pass"

        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/titulo_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separador"
        android:text="@string/titulo_registro"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/bnt_registro"
        android:layout_width="0dp"
        android:layout_height="@dimen/editx_height"
        android:backgroundTint="@color/nara_oscuro"
        android:layout_marginTop="20dp"
        android:text="@string/crear"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/bnt_signOut"
        app:layout_constraintEnd_toEndOf="@id/correo"
        app:layout_constraintStart_toStartOf="@id/correo"
        app:layout_constraintTop_toBottomOf="@id/titulo_regis" />

    <Button
        android:id="@+id/bnt_signOut"
        android:layout_width="0dp"
        android:layout_height="@dimen/editx_height"
        android:backgroundTint="@color/nara_oscuro"
        android:layout_marginTop="20dp"
        android:text="@string/signOut"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/adminOptions"
        app:layout_constraintEnd_toEndOf="@id/correo"
        app:layout_constraintStart_toStartOf="@id/correo"
        />
    <Button
        android:id="@+id/adminOptions"
        android:layout_width="0dp"
        android:layout_height="@dimen/editx_height"
        android:text="Admin Options"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="@+id/correo"
        app:layout_constraintEnd_toEndOf="@+id/correo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>