<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fondo"
    tools:context=".view.fragment.CorreoOlvidadoFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/titulo_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_correo_olvidado"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="110dp"
        android:textSize="20dp"/>

    <ImageView
        android:id="@+id/cruz_registro"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_cruz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />
    <TextView
        android:id="@+id/texto_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_correo_olvidado"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo_regis"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:textSize="15dp"/>
    <EditText
        android:id="@+id/restablecer_correo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/editx_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="110dp"
        android:paddingVertical="12dp"
        android:hint="@string/correo"
        android:background="@drawable/button_border"
        app:layout_constraintTop_toBottomOf="@id/texto_registro"/>
    <Button
        android:id="@+id/bnt_continuar"
        android:layout_width="0dp"
        android:layout_height="@dimen/editx_height"
        app:layout_constraintStart_toStartOf="@id/restablecer_correo"
        app:layout_constraintEnd_toEndOf="@id/restablecer_correo"
        app:layout_constraintTop_toBottomOf="@id/restablecer_correo"
        android:layout_marginTop="40dp"
        android:text="@string/continuar"
        android:textColor="@color/white"
        android:backgroundTint="@color/nara_oscuro"
        />
</androidx.constraintlayout.widget.ConstraintLayout>