<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fondo"
    tools:context=".view.fragment.CorreoEnviadoFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/cruz_enviado"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_cruz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />
    <TextView
        android:id="@+id/titulo_enviado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_correoenviado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22dp"
        android:textStyle="bold"
        android:layout_marginTop="110dp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/direccion_correoEnvi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/red"
        android:textStyle="italic"

        android:textSize="20dp"
        android:text="Ejemplo@gmail.com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo_enviado"/>
    <TextView
        android:id="@+id/info_Noenviado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/direccion_correoEnvi"
        android:text="@string/info_NoEnviado"
        android:textColor="@color/black"
        android:padding="20dp"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/no_recibido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_Noenviado"
        android:text="@string/direccion_correo_NOEnviado"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>